it`s time go to karpaty

--- a/frontend/src/components/UI/Layout/Footer/Footer.scss
+++ b/frontend/src/components/UI/Layout/Footer/Footer.scss
@@ -1,29 +1,28 @@
 .Footer {
-  background: $main-light-color;
+  background: $footerRootStyleTypeBg;
   padding: 20px;
-  
   &-box {
     @include flex(center, center);
     &-info {
       flex: 1;
       height: 100%;
       width: 100%;
-      border: 1px solid $main-dark-color;
+      border: 1px solid $footerRootStyleTypeColor;
       border-bottom: none;
       &:last-child {
         border-left: none;
       }
       &-header {
         @include flex(center, center);
-        border-bottom: 1px solid $main-dark-color;
+        border-bottom: 1px solid $footerRootStyleTypeColor;
         text-align: center;
         &-title {
           width: 100%;
           flex: 1;
-          border-right: 1px solid $main-dark-color;
+          border-right: 1px solid $footerRootStyleTypeColor;
           & > p {
             padding: 10px;
-            color: $main-dark-color;
+            color: $footerRootStyleTypeColor;
             font-family: $main-font-medium;
             text-transform: uppercase;
             @include adaptivFont(16, 14);
@@ -35,7 +34,7 @@
           flex: 1;
           & > a {
             padding: 10px;
-            color: $main-dark-color;
+            color: $footerRootStyleTypeColor;
             font-family: $main-font-bold;
             text-transform: uppercase;
             @include adaptivFont(26, 18);
@@ -50,8 +49,10 @@
           padding: 15px;
           text-align: center;
           & > h3 {
+            color: $footerRootStyleTypeColor;
             font-family: $main-font-medium;
-            @include adaptivFont(16, 14);
+            @include adaptivFont(18, 14);
+            letter-spacing: 2px;
           }
           & > ul {
             margin-top: 15px;
@@ -59,10 +60,10 @@
               margin-top: 5px;
               & > a {
                 white-space: nowrap;
-                color: $main-dark-color;
+                color: $footerRootStyleTypeColor;
                 font-family: $main-font-medium;
                 @include adaptivFont(16, 12);
-                letter-spacing: 1px;
+                letter-spacing: 2px;
               }
             }
           }
@@ -70,7 +71,7 @@
       }
       &-social {
         @include flex(center,center);
-        border-bottom: 1px solid $main-dark-color;
+        border-bottom: 1px solid $footerRootStyleTypeColor;
         text-align: center;
 
         & > div {
@@ -79,11 +80,11 @@
         & > a {
           flex: 2;
           padding: 10px;
-          color: $main-dark-color;
+          color: $footerRootStyleTypeColor;
           font-family: $main-font-bold;
           text-transform: uppercase;
           @include adaptivFont(16, 14);
-          border-left: 1px solid $main-dark-color;
+          border-left: 1px solid $footerRootStyleTypeColor;
         }
       }
 
@@ -92,6 +93,8 @@
         min-height: 260px;
         @include flex(center,center);
         & > p {
+          letter-spacing: 2px;
+          color: $footerRootStyleTypeColor;
           font-family: $main-font-medium-italic;
           @include adaptivFont(16, 14);
           text-align: center;
@@ -102,10 +105,11 @@
 
   &-copyright {
     padding: 10px 0;
-    border: 1px solid $main-dark-color;
+    border: 1px solid $footerRootStyleTypeColor;
     @include flex(center, center);
     flex-direction: column;
     & > h2 {
+      color: $footerRootStyleTypeColor;
       font-family: $main-font-bold;
       @include adaptivFont(20, 14);
     }
@@ -113,7 +117,7 @@
       margin-top: 5px;
       font-family: $main-font-italic;
       @include adaptivFont(16, 12);
-      color: $main-dark-color;
+      color: $footerRootStyleTypeColor;
     }
   }
 }
@@ -124,7 +128,11 @@
       flex-direction: column;
       &-info {
         &:last-child {
-          border-left: 1px solid $main-dark-color;
+          border-left: 1px solid $footerRootStyleTypeColor;
+        }
+        &-story {
+          padding: 20px;
+          min-height: auto;
         }
         &-header {
           flex-direction: column-reverse;
