--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -11,3 +11,4 @@
 @import './Quantity/Quantity.scss';
 @import './Loader/Loader.scss';
 @import './TextPageIntro/TextPageIntro.scss';
+@import './SeparatingLine/SeparatingLine.scss';
