--- a/frontend/src/components/pages/Home/OurStory/OurStory.scss
+++ b/frontend/src/components/pages/Home/OurStory/OurStory.scss
@@ -22,9 +22,9 @@
       text-align: center;
       font-size: 60px;
       font-family: $main-font-regular;
-      & > span {
-        font-family: $main-font-light-italic;
-      }
+      // & > span {
+      //   font-family: $main-font-light-italic;
+      // }
     }
   }
 
