--- a/frontend/src/components/pages/pages.scss
+++ b/frontend/src/components/pages/pages.scss
@@ -6,4 +6,5 @@
 @import './Message/Message.scss';
 @import './Cart/Cart.scss';
 @import './Checkout/Checkout.scss';
-@import './Login/Login.scss';
+@import './Signin/Signin.scss';
+@import './UserProfile/UserProfile.scss';
