--- a/frontend/src/style/variables.scss
+++ b/frontend/src/style/variables.scss
@@ -2,6 +2,9 @@
 
 $rootStyleTypeColor: var(--rootStyleTypeColor);
 $rootStyleTypeBg: var(--rootStyleTypeBg);
+$footerRootStyleTypeColor: var(--footerRootStyleTypeColor);
+$footerRootStyleTypeBg: var(--footerRootStyleTypeBg);
+
 
 // Color
 
