--- a/frontend/src/components/UI/SiteTitleNav/SiteTitleNav.scss
+++ b/frontend/src/components/UI/SiteTitleNav/SiteTitleNav.scss
@@ -15,7 +15,8 @@
         font-family: $main-font-regular;
         color: $rootStyleTypeColor;
         letter-spacing: 2px;
-        @include adaptivFont(20,16);
+        @include adaptivFont(20,12);
+        white-space: nowrap;
       }
       & > span {
         margin: 0 5px;
