--- a/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
+++ b/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
@@ -31,6 +31,7 @@
         margin-bottom: 20px;
         text-align: center;
         letter-spacing: 10px;
+        white-space: nowrap;
 
         &.second {
           margin-top: 20px;
