--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -1,3 +1,10 @@
+:root {
+  --rootStyleTypeColor: #e3e0de;
+  --rootStyleTypeBg: #181818;
+  --footerRootStyleTypeColor: #181818;
+  --footerRootStyleTypeBg:#e3e0de;
+}
+
 // Basic import
 
 @import "./fonts/font_face.scss";
@@ -30,6 +37,21 @@ ul {
   list-style: none;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus
+input:-webkit-autofill, 
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: $rootStyleTypeColor;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 5000s ease-in-out 0s;
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(0,174,255,0.04) 50%,rgba(255,255,255,0) 51%,rgba(0,174,255,0.03) 100%);  
+}
 
 ::-webkit-scrollbar {
   width: 8px;
