start with shipping

--- a/frontend/src/components/pages/pages.scss
+++ b/frontend/src/components/pages/pages.scss
@@ -5,6 +5,6 @@
 @import './ProductScreen/ProductScreen.scss';
 @import './Message/Message.scss';
 @import './Cart/Cart.scss';
-@import './Checkout/Checkout.scss';
 @import './Signin/Signin.scss';
 @import './UserProfile/UserProfile.scss';
+@import './Shipping/Shipping.scss';
