--- a/frontend/src/components/pages/UserProfile/UserProfile.scss
+++ b/frontend/src/components/pages/UserProfile/UserProfile.scss
@@ -4,7 +4,6 @@
     padding: 100px 10px 10px 10px;
   }
   &-title {
-    margin: 15px 0;
     width: 100%;
     text-align: left;
     border-bottom: 1px solid $rootStyleTypeColor;
@@ -18,26 +17,36 @@
     }
   }
   &-box {
-    @include flex(center,center);
+    padding: 20px 0;
+    @include flex(flex-start,center);
     width: 100%;
     &-navigation {
+      width: 100%;
       flex: 1;
       & > ul {
-        margin-top: 20px;
+        margin-top: 15px;
         width: 100%;
-        height: 100%;
         & > li {
+          padding: 10px;
+          @include flex(flex-start, center);
+          flex-direction: column;
           &:hover > div {
             width: 100%;
           }
           & > button {
+            width: 100%;
+            display: block;
+            text-align: left;
             margin: 0;
             padding: 0;
             background: none;
             border: none;
             color: $rootStyleTypeColor;
             font-family: $main-font-regular;
+            letter-spacing: 3px;
+            white-space: nowrap;
             @include adaptivFont(25, 14);
+
             &:active,
             &:focus {
               outline: none;
@@ -46,7 +55,7 @@
         }
       }
       &-line {
-        margin: 20px 0;
+        margin: 10px 0;
         width: 0;
         height: 1px;
         background: $rootStyleTypeColor;
@@ -58,7 +67,24 @@
       width: 100%;
       height: 100%;
       flex: 3;
-      border-left: 1px solid $rootStyleTypeColor;
     }
   }
 }
+
+@media screen and(max-width: $breakpoint-sm) {
+  .UserProfile {
+    &-box {
+      padding: 0;
+      flex-direction: column;
+      &-navigation {
+        border-bottom: 1px solid $footerRootStyleTypeColor;
+        & > ul {
+          @include flex(center, space-between);
+          flex-wrap: wrap;
+        }
+      }
+    }
+  }
+}
+
+@import './UpdateProfile/UpdateProfile.scss';
