refactor scss / start with shipping

--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -12,3 +12,4 @@
 @import './Loader/Loader.scss';
 @import './TextPageIntro/TextPageIntro.scss';
 @import './SeparatingLine/SeparatingLine.scss';
+@import './CartItem/CartItem.scss';
