--- a/frontend/src/style/utility.scss
+++ b/frontend/src/style/utility.scss
@@ -1,14 +1,17 @@
-
 .container {
   max-width: $breakpoint-xlg;
   margin: 0 auto;
 }
 
-.containImage {
+.coverImage {
   width: 100%;
   height: 100%;
-  object-fit: contain;
-  overflow: hidden;
+  object-fit: cover;
+}
+
+.darkTheme * {
+  --rootStyleTypeColor: #e3e0de;
+  --rootStyleTypeBg: #181818;
 }
 
 // Mixin
@@ -34,4 +37,20 @@
   @media (min-width: 767px) {
     font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
   }
+}
+
+@mixin setFontStyle($fontType, $fontColor ,$pcSize, $mobSize) {
+  font-family: $fontType;
+  color: $fontColor;
+
+  $addSize: $pcSize - $mobSize;
+  $addMobSize: $addSize + $addSize * 0.7;
+
+  @media (max-width: 767px) {
+    font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+  }
+  @media (min-width: 767px) {
+    font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
+  }
+
 }
