--- a/frontend/src/components/pages/Cart/Cart.scss
+++ b/frontend/src/components/pages/Cart/Cart.scss
@@ -9,7 +9,7 @@
 
   &-box {
     float: right;
-    max-width: 60%;
+    max-width: 50%;
     width: 100%;
     height: 100%;
     background: $rootStyleTypeBg;
@@ -124,6 +124,22 @@
   }
 }
 
+@media screen and (max-width: $breakpoint-xlg) {
+  .Cart {
+    &-box {
+      max-width: 60%;
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-lg) {
+  .Cart {
+    &-box {
+      max-width: 65%;
+    }
+  }
+}
+
 @media screen and (max-width: $breakpoint-md) {
   .Cart {
     &-box {
@@ -141,6 +157,7 @@
         border-top: 1px solid $rootStyleTypeColor;
         flex-direction: column-reverse;
         &-to-shopping > a {
+          margin-top: 10px;
           min-width: 30%;
         }
         &-checkout {
