--- a/frontend/src/components/pages/Shop/PageNavigator/PageNavigator.scss
+++ b/frontend/src/components/pages/Shop/PageNavigator/PageNavigator.scss
@@ -3,24 +3,20 @@
   min-height: 60px;
   @include flex(center,center);
   margin-bottom: 50px;
+
   & > button {
+    @include setFontStyles($main-font-regular, $rootStyleTypeColor, 2.2rem);
     width: 40px;
     height: 40px;
     border: none;
     background: none;
     border-radius: 50%;
-    cursor: pointer;
-    &:active,
-    &:focus {
-      outline: none;
-    }
+
     &:hover {
       transform: scale(1.2);
     }
   }
   &-btn {
-    font-family:$main-font-regular;
-    font-size: 20px;
     border-radius: 50%;
     margin: 0 5px;
     &.current {
@@ -30,10 +26,9 @@
   }
   &-arrow {
     background: transparent;
-    font-size: 20px;
-    color: $rootStyleTypeColor;
+    @include setFontStyles($main-font-regular, $rootStyleTypeColor, 2.2rem);
+    font-weight: 100;
     @include flex(center,center);
-    cursor: pointer;
     margin: 10px;
   }
 }
