--- a/frontend/src/components/pages/Shop/ShopProducts/ProductCard/ProductCard.scss
+++ b/frontend/src/components/pages/Shop/ShopProducts/ProductCard/ProductCard.scss
@@ -5,28 +5,26 @@
   @include flex(center, flex-start);
   flex-direction: column;
   transition: all 0.5s ease;
+
   & > a {
     text-align: center;
   }
 
   & > p {
     margin-bottom: 10px;
-    font-family: $main-font-medium;
-    font-size: 16px;
+    @include setFontStyles($main-font-medium, $rootStyleTypeColor, 1.6rem);
   }
 
   &-title {
     margin: 5px 0;
-    font-family: $main-font-bold;
-    font-size: 25px;
+    @include setFontStyles($main-font-bold, $rootStyleTypeColor, 2.4rem);
   }
 
   & > h5 {
     margin: 10px;
-    font-family: $main-font-bold;
-    color: $rootStyleTypeColor;
-    font-size: 20px;
+    @include setFontStyles($main-font-bold, $rootStyleTypeColor, 2.4rem);
   }
+  
   &-line {
     width: 100%;
     height: 1px;
