--- a/frontend/src/components/pages/Shop/ShopProducts/ShopProducts.scss
+++ b/frontend/src/components/pages/Shop/ShopProducts/ShopProducts.scss
@@ -7,8 +7,7 @@
     margin-bottom: 40px;
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    @include grid(260px);
     grid-gap: 25px;
   }
 }
