--- a/frontend/src/components/UI/CartItem/CartItem.scss
+++ b/frontend/src/components/UI/CartItem/CartItem.scss
@@ -1,45 +1,41 @@
 .CartItem {
+  width: 100%;
   border-bottom: 1px solid $rootStyleTypeColor;
-  @include flex(center, space-between);
-  flex-wrap: wrap;
+  @include grid(130px);
+  grid-gap: 10px;
+  padding: 2rem 1rem;
 
   &-image {
-    margin: 20px 0;
     flex-grow: 1;
     flex-shrink: 0;
-    max-width: 17rem;
-    max-height: 17rem;
+    max-width: 22rem;
+    max-height: 22rem;
   }
 
   &-info {
-    flex: 1;
-    width: 100%;
-    margin: 20px 0;
-    padding-left: 20px;
-    height: 17rem;
     text-align: left;
     @include flex(flex-start, space-between);
     flex-direction: column;
 
     & > h5 {
-      @include setFontStyles($main-font-medium, $rootStyleTypeColor, 1.8rem);
+      @include setFontStyles($main-font-medium, $rootStyleTypeColor, 2.2rem);
       font-weight: 100;
       letter-spacing: 2px;
     }
+    
     &-name {
-      
       & > a {
-        @include setFontStyles($main-font-medium, $rootStyleTypeColor, 2.2rem);
+        @include setFontStyles($main-font-medium, $rootStyleTypeColor, 3rem);
         font-weight: bold;
         letter-spacing: 3px;
       }
     }
 
     &-descAndLikes {
+      width: 100%;
       @include flex(center, space-between);
-
       & > div {
-        @include flex(center,center);
+        @include flex(center, space-between);
         flex-direction: column;
         @include setFontStyles($main-font-medium, $rootStyleTypeColor, 1.8rem);
 
@@ -51,11 +47,10 @@
   }
 
   &-qntDelAndPrice{
-    flex: 1;
-    margin: 20px 0;
     @include flex(center, space-between);
     flex-direction: column;
     &-qntDel {
+      margin-bottom: 20px;
       @include flex(center, space-around);
     }
     &-price {
@@ -67,8 +62,19 @@
   }
 }
 
-@media screen and(max-width: $breakpoint-sm) {
+
+@media screen and(max-width: $breakpoint-xsm) {
   .CartItem {
-    justify-content: center;
+    grid-template-columns: repeat(1, 1fr);
+    &-image {
+      justify-self: center;
+      align-self: center;
+      max-width: none;
+      max-height: none;
+    }
+    &-info {
+      justify-self: center;
+      align-self: center;
+    }
   }
 }
